--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --color-key-hover: hsl(180, 0%, 40%);
   --color-notification-type-error: rgb(180, 34, 34);
   --color-notification-type-success: var(--color-correct);
+  --color-notification-border: hsl(0, 0%, 0%);
 
   --border-width: 0.05em;
 }
@@ -22,6 +23,7 @@
 :root {
       --body-bg: hsl(216, 28%, 7%);
       --body-color: hsl(210, 17%, 90%);
+      --color-notification-border: hsl(0, 0%, 100%);
   }
 }
 
